--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/socialmediadb
 spring.datasource.username=root
-spring.datasource.password=system
+spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
