--- a/post-service.properties
+++ b/post-service.properties
@@ -1,8 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/socialmediadb
 spring.datasource.username=root
-spring.datasource.password=system
+spring.datasource.password=admin
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-squ=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
